RESOLVED FIXED279742
Fix visionOS build failure after 283678@main
https://bugs.webkit.org/show_bug.cgi?id=279742
Summary Fix visionOS build failure after 283678@main
Etienne
Reported 2024-09-15 14:47:10 PDT
Missing update for RE_DYNAMIC_CONTENT_SCALING
Attachments
Radar WebKit Bug Importer
Comment 1 2024-09-15 14:47:20 PDT
Etienne
Comment 2 2024-09-15 14:50:05 PDT
EWS
Comment 3 2024-09-16 00:04:39 PDT
Committed 283691@main (a7b93a6e823a): <https://commits.webkit.org/283691@main> Reviewed commits have been landed. Closing PR #33681 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.