Fix visionOS build failure after 283678@main https://bugs.webkit.org/show_bug.cgi?id=279742 rdar://136045067

Reviewed by Matt Woodrow.

Update the `m_frontBuffer` use that lingered in a
`ENABLE(RE_DYNAMIC_CONTENT_SCALING)` block.

* Source/WebKit/Shared/RemoteLayerTree/RemoteLayerWithInProcessRenderingBackingStore.mm:
(WebKit::RemoteLayerWithInProcessRenderingBackingStore::displayListHandle const):

Canonical link: https://commits.webkit.org/283691@main